# PolyAgent

./: .env.example  CHANGELOG.md  CITATION.cff  LICENSE  PolyAgent_项目人工智能理论知识说明.docx  README.md  README.zh-CN.md  ROADMAP.md  app.py  gen_test_files.py  gitignore  pyproject.toml  pytest.ini  requirements.txt  ui.py
agents/: __init__.py  guide_agent.py  qa_agent.py  summary_agent.py  writing_agent.py
config/: __init__.py  settings.py
core/: __init__.py  chat_service.py  prepare.py  router.py  state.py  supervisor.py
docs/: launch-kit.md
docs/releases/: v0.1.0.md
frontend/: index.html
frontend/static/: app.js  styles.css
knowledge/: __init__.py  vectorstore.py
knowledge/data/: index.md
knowledge/data/notice/: notice_001_校领导教师节走访慰问教师代表.md  notice_002_我校入选全国高校体育风采典型案例并集中展.md  notice_003_我校召开庆祝第41个教师节座谈会.md  notice_004_我校沈晓冬教授荣获_2025江苏教师年度.md  notice_005_我校新增2个高等学校虚拟仿真教学创新实验.md  notice_006_亨通集团来校开展产学研合作交流会.md  notice_007_我校4项成果获评2023_2024年度江.md  notice_008_我校获批首批江苏省未来产业技术研究院.md  notice_009_学校举办2025年度_同心共筑教育梦_统.md  notice_010_学校举行欧阳平凯院士铜像揭幕仪式.md  notice_012_我校开展自然灾害受灾家庭学生关爱资助工作.md  notice_015_我校携手扬子江法务区共建江苏省民营企业法.md  notice_016_我校2025年高招季本科招生宣传工作顺利.md  (+1059 more)
legacy/: batch_convert.py  test_deepseek_api.py  test_langgraph_basic.py  test_langgraph_supervisor.py  test_llm_switch.py  test_qwen_api.py  verify_knowledge_data.py
scripts/: generate_readme_screenshots.py  generate_social_preview.py
test_uploads/: test_doc.docx  test_note.md  test_other.csv  test_short.txt
tests/: __init__.py  conftest.py  test_app.py  test_guide_agent.py  test_integration.py  test_prepare.py  test_qa_agent.py  test_router.py  test_summary_agent.py  test_ui.py  test_writing_agent.py
(+1771 files in other folders)
